# autonomous_navigation_environment_ego

./: README.md
src/ego_planner_ros2/: 说明.txt
src/ego_planner_ros2/src/planner/bspline_opt/src/: bspline_optimizer.cpp
src/ego_planner_ros2/src/planner/path_searching/src/: dyn_a_star.cpp
src/ego_planner_ros2/src/planner/plan_env/src/: grid_map.cpp
src/ego_planner_ros2/src/planner/plan_manage/: CMakeLists.txt
src/ego_planner_ros2/src/planner/plan_manage/config/: ros2_ego_rviz.rviz  tare_gazebo_env.rviz
src/ego_planner_ros2/src/planner/plan_manage/launch/: advanced_param.launch.py  our_method_data_get.py  simulator.launch.py  single_run_in_sim.launch.py  uav_garage.launch.py  uav_new_garage.launch.py  uav_tunnel.launch.py
src/ego_planner_ros2/src/planner/plan_manage/src/: ego_replan_fsm.cpp  planner_manager.cpp
src/ego_planner_ros2/src/uav_simulator/Utils/odom_visualization/: CMakeLists.txt
src/ego_planner_ros2/src/uav_simulator/fake_drone/: CMakeLists.txt
src/ego_planner_ros2/src/uav_simulator/fake_drone/src/: poscmd_2_odom.cpp
src/ego_planner_ros2/src/uav_simulator/local_pcl_map_provider/: CMakeLists.txt  package.xml
src/ego_planner_ros2/src/uav_simulator/local_pcl_map_provider/config/: local_pcl_map_provider.yaml
src/ego_planner_ros2/src/uav_simulator/local_pcl_map_provider/launch/: local_pcl_map_provider.launch.py
src/ego_planner_ros2/src/uav_simulator/local_pcl_map_provider/src/: local_pcl_map_provider.cpp
src/local_planner/: CMakeLists.txt  package.xml
src/local_planner/config/: localPlanner.yaml  pathFollower.yaml
src/local_planner/launch/: local_planner.launch.py  test.launch.py
src/local_planner/src/: localPlanner.cpp  pathFollower.cpp
src/sensor_scan_generation/: CMakeLists.txt  package.xml
src/sensor_scan_generation/launch/: sensor_scan_generation.launch.py
src/sensor_scan_generation/src/: sensorScanGeneration.cpp
src/simulation_gazebo_model/launch_files/turtlebot3_gazebo/: CMakeLists.txt
src/simulation_gazebo_model/launch_files/turtlebot3_gazebo/launch/: robot_state_publisher.launch.py  turtlebot3_house.launch.py  uav_and_env.launch.py  uav_and_env_new_garage.launch.py  uav_and_env_tunnel.launch.py  uav_model_test.launch.py  uav_robot_state_publisher.launch.py
src/simulation_gazebo_model/launch_files/turtlebot3_gazebo/models/Dcamera/: model.sdf
src/simulation_gazebo_model/launch_files/turtlebot3_gazebo/models/VLP16_lidar/: model.sdf
src/simulation_gazebo_model/launch_files/turtlebot3_gazebo/models/turtlebot3_burger/: model.sdf
src/simulation_gazebo_model/launch_files/turtlebot3_gazebo/models/turtlebot3_waffle/: model.sdf
src/simulation_gazebo_model/launch_files/turtlebot3_gazebo/models/uav_model/: model.sdf
src/simulation_gazebo_model/launch_files/turtlebot3_gazebo/models/urdf_m100/: ardrone.xacro  ardrone_base.xacro  asymmetric_quadrotor.xacro  asymmetric_quadrotor_base.xacro  asymmetric_quadrotor_two_cameras.gazebo  component_snippets.xacro  firefly.xacro  firefly_base.xacro  firefly_generic_pose_sensor.gazebo  firefly_two_generic_pose_sensors.gazebo  hummingbird.xacro  hummingbird_base.xacro  iris.xacro  iris_base.xacro  m100.gazebo  m100.xacro  m100_base.xacro  m100_odometry_sensor.gazebo  (+18 more)
src/simulation_gazebo_model/sdf_model_urdf_files/turtlebot3_description/urdf/: turtlebot3_waffle_pi.urdf  uav.urdf
src/terrain_analysis/: CMakeLists.txt  package.xml
src/terrain_analysis/config/: terrain_analysis.yaml
src/terrain_analysis/launch/: terrain_analysis.launch.py
src/terrain_analysis/src/: terrainAnalysis.cpp
src/terrain_analysis_ext/: CMakeLists.txt  package.xml
src/terrain_analysis_ext/config/: terrain_analysis_ext.yaml
src/terrain_analysis_ext/launch/: terrain_analysis_ext.launch.py
src/terrain_analysis_ext/src/: terrainAnalysisExt.cpp
src/vehicle_simulator/: CMakeLists.txt  package.xml
src/vehicle_simulator/config/: tare_gazebo_env.rviz  vehicleSimulator.yaml
src/vehicle_simulator/launch/: model_test.launch.py  new_test.launch.py  system_garage.launch  system_new_garage.launch.py  vehicle_simulator.launch.py  world_test.launch.py
src/vehicle_simulator/log/: metrics_2023-10-31-18-41-49.txt  metrics_2023-10-31-19-14-15.txt  metrics_2023-11-20-17-35-45.txt  metrics_2023-11-20-17-41-57.txt  metrics_2023-11-21-17-11-14.txt  metrics_2023-11-21-17-4-8.txt  metrics_2023-11-21-19-46-59.txt  metrics_2023-11-21-20-15-28.txt  metrics_2023-11-21-20-16-34.txt  metrics_2023-11-21-20-24-59.txt  metrics_2023-11-21-20-29-24.txt  metrics_2023-11-21-20-32-16.txt  metrics_2023-11-28-16-21-18.txt  metrics_2023-11-28-16-33-12.txt  metrics_2023-11-28-16-34-14.txt  metrics_2023-11-28-16-35-8.txt  metrics_2023-11-28-16-40-33.txt  metrics_2023-12-27-12-59-12.txt  metrics_2023-12-27-13-11-21.txt  metrics_2023-12-27-13-39-36.txt  metrics_2023-12-27-13-44-34.txt  metrics_2023-12-27-13-50-38.txt  metrics_2023-12-27-14-15-49.txt  metrics_2023-12-27-14-25-41.txt  metrics_2023-12-27-18-52-40.txt  metrics_2023-12-27-20-17-33.txt  metrics_2023-12-27-20-20-56.txt  metrics_2023-12-27-20-4-23.txt  metrics_2023-12-27-20-6-44.txt  metrics_2023-12-27-20-9-14.txt  metrics_2023-12-27-21-17-54.txt  metrics_2023-12-28-16-20-6.txt  metrics_2023-12-28-20-12-16.txt  metrics_2023-12-28-20-33-52.txt  metrics_2023-12-28-20-38-38.txt  metrics_2023-12-28-20-48-3.txt  metrics_2023-12-28-20-50-10.txt  metrics_2023-12-28-20-51-44.txt  metrics_2023-12-28-21-25-14.txt  metrics_2023-12-28-21-48-28.txt  (+1019 more)
src/vehicle_simulator/mesh/new_garage_v1/: model.config  model.sdf
src/vehicle_simulator/mesh/new_garage_v2/: model.config  model.sdf
src/vehicle_simulator/rviz/: vehicle_simulator.rviz
src/vehicle_simulator/src/: vehicleSimulator.cpp
src/vehicle_simulator/urdf/: new_robot.urdf
src/visualization_tools/: CMakeLists.txt  package.xml
src/visualization_tools/launch/: visualization_tools.launch.py
src/visualization_tools/scripts/: realTimePlot.py
src/visualization_tools/src/: visualizationTools.cpp
src/visualization_tools_py/: package.xml  setup.cfg  setup.py
src/visualization_tools_py/visualization_tools_py/: realTimePlot.py
(+10 files in other folders)
